--- a/docs-content/integration-with-logsearch.html.md.erb
+++ b/docs-content/integration-with-logsearch.html.md.erb
@@ -5,7 +5,8 @@ owner: Partners
 
 This topic describes the functionality available to Altoros Heartbeat users upon integration with Altoros Log Search for Pivotal Cloud Foundry (PCF).
 
-Integration with [Altoros Log Search for PCF](https://network.pivotal.io/products/altoros-log-search) gives users access to VM and application logs right from the Grafana interface or by a direct link to the corresponding Kibana dashboard.
+Integration with [Altoros Log Search for PCF](https://network.pivotal.io/products/altoros-log-search) gives users access to VM
+and application logs right from the Grafana interface or by a direct link to the corresponding Kibana dashboard.
 
 ##<a id='apps'></a>Integration of Application Logs
 
@@ -13,9 +14,11 @@ On the **CF Apps Metrics for Ops with Logs**/**CF Apps Metrics for Devs with Log
 
 <%= image_tag("images/apps_metrics_with_logs_header.png") %>
 
-Clicking on the **See logs** link opens a Kibana dashboard with configured **org**/**space**/**app** fields and a selected time interval.
+Clicking the **See logs** link opens a Kibana dashboard with configured **org**/**space**/**app** fields and a selected time interval.
 
-The **Deploy** and **Errors** checkboxes, when selected, enable [annotations](http://docs.grafana.org/reference/annotations/) for deployment/error events respectively on the graph. For example:
+The **Deploy** and **Errors** checkboxes, when selected,
+enable [annotations](http://docs.grafana.org/reference/annotations/) for deployment/error events respectively on the graph.
+For example:
 
 <%= image_tag("images/annotation_example_apps.png") %>
 
@@ -29,9 +32,12 @@ On the **CF Components Stats with Logs** dashboard, you see:
 
 <%= image_tag("images/components_stats_with_logs_header.png") %>
 
-Clicking on the **See logs** link opens a Kibana dashboard with configured **host**/**host index** fields and a selected time interval.
+Clicking the **See logs** link opens a Kibana dashboard with configured **host**/**host index** fields
+and a selected time interval.
 
-The **Errors** checkbox, when selected, enables [annotations](http://docs.grafana.org/reference/annotations/) for error events on the graph. For example:
+The **Errors** checkbox, when selected, enables [annotations](http://docs.grafana.org/reference/annotations/)
+for error events on the graph.
+For example:
 
 <%= image_tag("images/annotation_example_vms.png") %>
 
