copyedit for statsd[#151083049]

--- a/docs-content/statsd.html.md.erb
+++ b/docs-content/statsd.html.md.erb
@@ -71,7 +71,8 @@ For an example of an app (written in golang) that sends custom metrics to a Graf
     service              plans                               description
     app-autoscaler       standard                            Scales bound applications in response to load (beta)</pre>
 
-1. Find Heartbeat in the list of the available services and select the service plan (currently, only standard is available—it will be selected by default).
+1. Find Heartbeat in the list of the available services and select the service plan
+   (currently, only standard is available—it is selected by default).
 
 1. Create a service instance.
 
