copyedit installing files[#151083049]

--- a/docs-content/installing-collectd.html.md.erb
+++ b/docs-content/installing-collectd.html.md.erb
@@ -9,7 +9,7 @@ This topic describes how to add collectd to your Pivotal Cloud Foundry (PCF) dep
 
 This add-on is required to enable the Altoros Heartbeat monitoring solution consume system metrics
 from the VMs that make up a PCF deployment. The [collectd](https://collectd.org/) add-on gathers VM
-metrics from PCF platform components and any other BOSH-deployed services (e.g., databases)
+metrics from PCF platform components and any other BOSH-deployed services, such as databases
 and makes this information available to Altoros Heartbeat over the network.
 
 ## <a id='prerequisites'></a>Prerequisites
