--- a/docs-content/installing.html.md.erb
+++ b/docs-content/installing.html.md.erb
@@ -49,11 +49,13 @@ This adds the tile to your staging area.
 
 1. To define email server settings, select the **SMTP** checkbox and complete the following fields:
 
-    **Host**: The hostname of the outgoing SMTP server
+    **Host:port**: The hostname and port of the outgoing SMTP server
 
     **Username**: Your SMTP server username
 
     **Password**: Your SMTP server password
+
+    **Disable SSL certificate verification**: You can disable SSL verification if you are using your own self-signed certificates that are not from a trusted CA
 
     **Address used when sending out emails**: The address from which emails will be sent
 
