--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -4,6 +4,16 @@ owner: Partners
 ---
 
 These are release notes for Altoros Heartbeat for Pivotal Cloud Foundry (PCF).
+##<a id="v1.0.1"></a>v1.0.1
+
+**Release Date:** October 6, 2017
+
+* Decreases the persistent disk space taken by the service frontend
+* Improves description of properties in the tile configuration UI
+* Fixes the RabbitMQ monitoring issue
+* Adds support for syslog logs from both Metron and blackbox
+
+<p class="note"><strong>Note</strong>: The service frontend no longer requires 100Gb of persistent disk space. You can now downscale to 5Gb </p>
 
 ##<a id="v1.0.0"></a>v1.0.0
 
