Change Alert config picture

--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -8,6 +8,8 @@ These are release notes for Altoros Heartbeat for Pivotal Cloud Foundry (PCF).
 
 **Release Date:** October 6, 2017
 
+Features included in this release:
+
 * Decreases the persistent disk space taken by the service frontend
 * Improves description of properties in the tile configuration UI
 * Fixes the RabbitMQ monitoring issue
