--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -118,7 +118,7 @@ The Altoros Heartbeat for PCF tile has the following limitations:
 * Offline buildpack for collecting JMX metrics is unavailable. Only the online version of the buildpack from
   [this GitHub repository](https://github.com/Altoros/java-buildpack#jmx-agent-integration) can be used to collect JMX metrics from Java apps.
 * Users are limited to using internal MariaDB to store internal Heartbeat data such as user sessions, mappings, dashboards, UI configs, etc.
-* Downscaling with retained high availability is only possible to at least two backend instances.
+* Downscaling with retained high availability is only possible to at least two back-end instances.
 
 ## <a id="feedback"></a>Feedback
 
