--- a/docs-content/installing.html.md.erb
+++ b/docs-content/installing.html.md.erb
@@ -282,11 +282,11 @@ For more information about third-party services monitoring, see [Third-Party Ser
 
 1. Complete the following fields:
 
-   1. **Load Balancer host for graphite endpoint**: IP address or hostname of your external Load Balancer configured for Heartbeat. For information about getting backend IP addresses for your configuration, see [**Finding Backend IPs**](ha-with-external-lb.html#finding-backend-ip). Leave blank if high availability is not required.
+   1. **Load Balancer host for graphite endpoint**: IP address or hostname of your external Load Balancer configured for Heartbeat. For information about getting back-end IP addresses for your configuration, see [**Finding Back-End IPs**](ha-with-external-lb.html#finding-backend-ip). Leave blank if high availability is not required.
 
    1. **Load Balancer port for graphite endpoint**: port number for the Load Balancer configured to accept metrics from the collectd addon.
 
-   1. **Load Balancer host for statsd endpoint**: IP address or hostname of the Load Balancer configured to accept  application metrics. For information about getting backend IP addresses for your configuration, see [**Finding Backend IPs**](ha-with-external-lb.html#finding-backend-ip). The properties are separate, so two separate load balancers for collectd and application metrics can be used. Leave blank if high availability is not required.
+   1. **Load Balancer host for statsd endpoint**: IP address or hostname of the Load Balancer configured to accept  application metrics. For information about getting back-end IP addresses for your configuration, see [**Finding Back-End IPs**](ha-with-external-lb.html#finding-backend-ip). The properties are separate, so two separate load balancers for collectd and application metrics can be used. Leave blank if high availability is not required.
 
    1. **Load Balancer port for statsd endpoint**: port number for the external Load Balancer configured to accept statsd connections. Note that you need to provide the port accepting metrics, not the port accepting health checks.
 
@@ -319,13 +319,13 @@ For more information about this feature, see [**High Availability**](ha-with-ext
 ##<a id='resourceconfig'></a>Configure Resource Config
 
 If you are using the **gp2** volume type with **Amazon EC2** instances and expect an intensive influx of metrics,
-Altoros recommends provisioning at least 300&nbsp;GB of persistent disk volume to the Heartbeat PCF Monitoring backend VMs to ensure sustained IOPS performance.
+Altoros recommends provisioning at least 300&nbsp;GB of persistent disk volume to the Heartbeat PCF Monitoring back-end VMs to ensure sustained IOPS performance.
 
 Perform the following steps to increase the default disk volume value:
 
 1. In the **Settings** tab, click **Resource Config**.
 
-1. Change the default value in the Persistent disk type column next to Heartbeat PCF Monitoring backend job from `100 GB` to `300 GB`.
+1. Change the default value in the Persistent disk type column next to Heartbeat PCF Monitoring back-end job from `100 GB` to `300 GB`.
 
     <%= image_tag("images/resource-config.png") %>
 
