--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -24,7 +24,7 @@ Features included in this release:
 Features included in this release:
 
 * Support for a High Availability mode of operation
-* Backend and frontend VMs are separated to improve flexibility and scalability
+* Back-end and front-end VMs are separated to improve flexibility and scalability
 * New versions of components
 * The Heartbeat URL is now `monitoring.%system-domain%`
 
