copyedit number non-breaking space GB[#151768400]

--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -15,7 +15,8 @@ Features included in this release:
 * Fixes the RabbitMQ monitoring issue
 * Adds support for syslog logs from both Metron and blackbox
 
-<p class="note"><strong>Note</strong>: The service frontend no longer requires 100Gb of persistent disk space. You can now downscale to 5Gb </p>
+<p class="note"><strong>Note</strong>: The service frontend no longer requires 100&nbsp;GB of persistent disk space.
+   You can now downscale to 5&nbsp;GB </p>
 
 ##<a id="v1.0.0"></a>v1.0.0
 
