--- a/docs-content/installing.html.md.erb
+++ b/docs-content/installing.html.md.erb
@@ -333,7 +333,9 @@ Perform the following steps to increase the default disk volume value:
 
 1. Return to the **Ops Manager Installation Dashboard** and click **Apply Changes** to apply the configuration settings.
 
-<p class="note"><strong>Note</strong>: If you are not monitoring external services, we recommend selecting 0 instances for <strong>Collectd VM to monitor external services</strong>. If you are going to monitor external services, reset the number of instances for this VM to 1. </p>
+<p class="note"><strong>Note</strong>: If you are not monitoring external services, 
+   Altoros recommends selecting 0 instances for <strong>Collectd VM to monitor external services</strong>.
+   If you are going to monitor external services, reset the number of instances for this VM to 1. </p>
 
 <p class="note"><strong>Note</strong>: After you complete the procedures on this page,
 follow the instructions in <a href="installing-collectd.html">Installing collectd Add-on for PCF</a>.</p>
