--- a/docs-content/installing.html.md.erb
+++ b/docs-content/installing.html.md.erb
@@ -55,7 +55,8 @@ This adds the tile to your staging area.
 
     **Password**: Your SMTP server password
 
-    **Disable SSL certificate verification**: You can disable SSL verification if you are using your own self-signed certificates that are not from a trusted CA
+    **Disable SSL certificate verification**: If you are using your own, self-signed certificates that are not from the trusted CA,
+      disable SSL verification.
 
     **Address used when sending out emails**: The address from which emails will be sent
 
