--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -4,6 +4,21 @@ owner: Partners
 ---
 
 These are release notes for Altoros Heartbeat for Pivotal Cloud Foundry (PCF).
+
+##<a id="v1.0.2"></a>v1.0.2
+
+**Release Date:** October 23, 2017
+
+Features included in this release:
+
+* Monitoring Concourse
+* Monitoring HAProxy
+* Dashboards bootstraping mechanism improvments
+* Metrics keep interval is 30 days by default now
+
+<p class="note"><strong>Note</strong>: Metrics are stored 30 days by default. If you need to store metrics longer please change **Days to keep inactive metrics** parameter on **Heartbeat Metrics Storage Configuration** tab</p>
+
+
 ##<a id="v1.0.1"></a>v1.0.1
 
 **Release Date:** October 6, 2017
