--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -14,10 +14,9 @@ Features included in this release:
 * Monitoring Concourse
 * Monitoring HAProxy
 * Dashboards bootstraping mechanism improvments
-* Metrics keep interval is 30 days by default now
+* Metrics are stored for 30 days now by default
 
-<p class="note"><strong>Note</strong>: Metrics are stored 30 days by default. If you need to store metrics longer please change **Days to keep inactive metrics** parameter on **Heartbeat Metrics Storage Configuration** tab</p>
-
+<p class="note"><strong>Note</strong>: Metrics are stored for 30 days by default and can’t be restored after this period. If you need to store metrics for a different period of time, please change the **Days to keep inactive metrics** parameter with a needed value on the **Heartbeat Metrics Storage Configuration** tab.</p>
 
 ##<a id="v1.0.1"></a>v1.0.1
 
