Style fixes in services-monitoring

--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -16,7 +16,7 @@ Features included in this release:
 * Dashboards bootstraping mechanism improvments
 * Metrics are stored for 30 days now by default
 
-<p class="note"><strong>Note</strong>: Metrics are stored for 30 days by default and can’t be restored after this period. If you need to store metrics for a different period of time, please change the **Days to keep inactive metrics** parameter with a needed value on the **Heartbeat Metrics Storage Configuration** tab.</p>
+<p class="note"><strong>Note</strong>: Metrics are stored for 30 days by default and can’t be restored after this period. If you need to store metrics for a different period of time, please change the <strong>Days to keep inactive metrics</strong> parameter with a needed value on the <strong>Heartbeat Metrics Storage Configuration</strong> tab.</p>
 
 ##<a id="v1.0.1"></a>v1.0.1
 
