Haproxy and concourse fixes in services-monitoring

--- a/docs-content/services-monitoring.html.md.erb
+++ b/docs-content/services-monitoring.html.md.erb
@@ -126,7 +126,7 @@ Configure Concourse web worker (aka ATC) to transfer metrics to Altoros Heartbea
 To track metrics from an external Concourse installation:
 
     1. Open the **Service - External Concourse Overview** dashboard.
-    1. From the **Deployment** drop-down menu, select **altoros-heartbeat-*.**
+    1. From the **Deployment** drop-down menu, select **altoros-heartbeat-.**
     1. From the **Web Host** drop-down menu, select the name of the host configured above.
 
 ##<a id='haproxy'></a>HAProxy
@@ -134,11 +134,11 @@ To track metrics from an external Concourse installation:
 <%= image_tag("images/haproxy-grafana-header.png") %>
 
 To track metrics from the HAProxy that is used by PCF Elastic Runtime:
-    1. Open the **CF HAProxy *** dashboards.
-    1. From the **Deployment** drop-down menu, select **cf-***.
+    1. Open the **CF HAProxy ** dashboards.
+    1. From the **Deployment** drop-down menu, select **cf-**.
     1. From the **Host** drop-down menu, select **ha_proxy**.
 
 To track metrics from the HAProxy used by the RabbitMQ for PCF tile:
-    1. Open the **CF HAProxy *** dashboards.
-    1. From the **Deployment** drop-down menu, select **p-rabbitmq-***.
+    1. Open the **CF HAProxy ** dashboards.
+    1. From the **Deployment** drop-down menu, select **p-rabbitmq-**.
     1. From the **Host** drop-down menu, select **rabbitmq-haproxy**.
