--- a/docs-content/services-monitoring.html.md.erb
+++ b/docs-content/services-monitoring.html.md.erb
@@ -114,31 +114,29 @@ Configure Concourse web worker (aka ATC) to transfer metrics to Altoros Heartbea
     1. From the Altoros Heartbeat for PCF tile, select the **Status** tab.
     1. Scroll down to **Collectd VM to monitor external services** and copy the IP -address in the **IPS** column.
 
-<%= image_tag("images/external-services-vm.png") %>
+    <%= image_tag("images/external-services-vm.png") %>
 
 1. Run Concourse web worker (aka ATC) using the following CLI parameters or environment variables:
-
     1. `--metrics-host-name=` or `CONCOURSE_RIEMANN_HOST= <the VM IP address copied in the previous step>`
     1. `--riemann-host=` or `CONCOURSE_METRICS_HOST_NAME= <the name of Concourse web worker>` Set a name starting with `web`, for example `web-0`.
 
 <%= image_tag("images/external-concourse-grafana-header.png") %>
 
-To track metrics from an external Concourse installation:
-
+1. To track metrics from an external Concourse installation:
     1. Open the **Service - External Concourse Overview** dashboard.
-    1. From the **Deployment** drop-down menu, select **altoros-heartbeat-.**
+    1. From the **Deployment** drop-down menu, select `altoros-heartbeat-*`.
     1. From the **Web Host** drop-down menu, select the name of the host configured above.
 
 ##<a id='haproxy'></a>HAProxy
 
 <%= image_tag("images/haproxy-grafana-header.png") %>
 
-To track metrics from the HAProxy that is used by PCF Elastic Runtime:
-    1. Open the **CF HAProxy ** dashboards.
-    1. From the **Deployment** drop-down menu, select **cf-**.
-    1. From the **Host** drop-down menu, select **ha_proxy**.
+1. To track metrics from the HAProxy that is used by PCF Elastic Runtime:
+    1. Open the **CF HAProxy*** dashboards.
+    1. From the **Deployment** drop-down menu, select `cf-*`.
+    1. From the **Host** drop-down menu, select `ha_proxy`.
 
-To track metrics from the HAProxy used by the RabbitMQ for PCF tile:
-    1. Open the **CF HAProxy ** dashboards.
-    1. From the **Deployment** drop-down menu, select **p-rabbitmq-**.
-    1. From the **Host** drop-down menu, select **rabbitmq-haproxy**.
+1. To track metrics from the HAProxy used by the RabbitMQ for PCF tile:
+    1. Open the **CF HAProxy*** dashboards.
+    1. From the **Deployment** drop-down menu, select `p-rabbitmq-*`.
+    1. From the **Host** drop-down menu, select `rabbitmq-haproxy`.
