--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -13,10 +13,10 @@ Features included in this release:
 
 * Monitoring Concourse
 * Monitoring HAProxy
-* Dashboards bootstraping mechanism improvments
-* Metrics are stored for 30 days now by default
+* Dashboards bootstraping mechanism improvements
+* Inactive metrics are stored for 30 days now by default
 
-<p class="note"><strong>Note</strong>: Metrics are stored for 30 days by default and can’t be restored after this period. If you need to store metrics for a different period of time, please change the <strong>Days to keep inactive metrics</strong> parameter with a needed value on the <strong>Heartbeat Metrics Storage Configuration</strong> tab.</p>
+<p class="note"><strong>Note</strong>: Inactive metrics are stored for 30 days by default and will be removed after this period. If you need to store inactive metrics for a different period of time, please change the <strong>Days to keep inactive metrics</strong> parameter with a needed value on the <strong>Heartbeat Metrics Storage Configuration</strong> tab.</p>
 
 ##<a id="v1.0.1"></a>v1.0.1
 
