--- a/docs-content/services-monitoring.html.md.erb
+++ b/docs-content/services-monitoring.html.md.erb
@@ -117,8 +117,8 @@ Configure Concourse web worker (aka ATC) to transfer metrics to Altoros Heartbea
     <%= image_tag("images/external-services-vm.png") %>
 
 1. Run Concourse web worker (aka ATC) using the following CLI parameters or environment variables:
-    1. `--metrics-host-name=` or `CONCOURSE_RIEMANN_HOST= <the VM IP address copied in the previous step>`
-    1. `--riemann-host=` or `CONCOURSE_METRICS_HOST_NAME= <the name of Concourse web worker>` Set a name starting with `web`, for example `web-0`.
+    1. `--metrics-host-name=` or `CONCOURSE_RIEMANN_HOST=<the VM IP address copied in the previous step>`
+    1. `--riemann-host=` or `CONCOURSE_METRICS_HOST_NAME=<the name of Concourse web worker>`. Set a name starting with `web`, for example `web-0`.
 
 <%= image_tag("images/external-concourse-grafana-header.png") %>
 
