Add concource ATC link

--- a/docs-content/services-monitoring.html.md.erb
+++ b/docs-content/services-monitoring.html.md.erb
@@ -108,7 +108,7 @@ This topic describes how to use dashboards for third-party services.
 
 ##<a id='concourse'></a>Concourse
 
-Configure Concourse web worker (aka ATC) to transfer metrics to Altoros Heartbeat. To do this:
+Configure Concourse web worker (aka [ATC](https://github.com/concourse/atc)) to transfer metrics to Altoros Heartbeat. To do this:
 
 1. Find the IP address of the Collectd virtual machine that is used to monitor external services:
     1. From the Altoros Heartbeat for PCF tile, select the **Status** tab.
