--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -7,16 +7,16 @@ These are release notes for Altoros Heartbeat for Pivotal Cloud Foundry (PCF).
 
 ##<a id="v1.0.2"></a>v1.0.2
 
-**Release Date:** October 24, 2017
+**Release Date:** October 25, 2017
 
 Features included in this release:
 
 * Monitoring Concourse
 * Monitoring HAProxy
-* Dashboards bootstraping mechanism improvements
+* Dashboards bootstrapping mechanism improvements
 * Inactive metrics are stored for 30 days now by default
 
-<p class="note"><strong>Note</strong>: Inactive metrics are stored for 30 days by default and will be removed after this period. If you need to store inactive metrics for a different period of time, please change the <strong>Days to keep inactive metrics</strong> parameter with a needed value on the <strong>Heartbeat Metrics Storage Configuration</strong> tab.</p>
+<p class="note"><strong>Note</strong>: Inactive metrics are stored for 30 days by default and will be removed after this period. If you need to store inactive metrics for a different period of time, please change the <strong>Days to keep inactive metrics</strong> parameter with the needed value on the <strong>Heartbeat Metrics Storage Configuration</strong> tab.</p>
 
 ##<a id="v1.0.1"></a>v1.0.1
 
