Copy edit of release notes and installing-collectd page [#152204049]

--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -11,8 +11,8 @@ These are release notes for Altoros Heartbeat for Pivotal Cloud Foundry (PCF).
 
 Features included in this release:
 
-* Monitoring Concourse
-* Monitoring HAProxy
+* Concourse monitoring
+* HAProxy monitoring
 * Dashboards bootstrapping mechanism improvements
 * Inactive metrics are stored for 30 days now by default
 
