--- a/docs-content/installing-collectd.html.md.erb
+++ b/docs-content/installing-collectd.html.md.erb
@@ -52,9 +52,9 @@ Follow the steps below to create a collectd manifest for your deployment:
 
 * `exclude: deployments`: (Optional) Specify the name of the deployment to mass exclude from the collectd add-on coverage.
 
-    <p class="note"><strong>Note</strong> If this functionality is not required, remove this section.</p>
+    <p class="note"><strong>Note:</strong> If this functionality is not required, remove this section.</p>
 
-* `releases: version`: Please use the version of collectd downloaded from Pivotal Network
+* `releases: version`: Use the version of collectd downloaded from Pivotal Network
 * `collectd: graphite_prefix`: Do not change the graphit_prefix name. It must be `cf.collectd`.
 * `collectd: graphite_servers`: If you are using Heartbeat in high availability mode, use your Load Balancer endpoint for collectd. For details, see [External Load Balancer configuration](ha-with-external-lb.html#lb-config).
 If you are not going to use the high availability mode, use the IP address of any of Altoros Heartbeat's back-ends. For details, see [Finding Back-End IPs](ha-with-external-lb.html#finding-backend-ip).
