Heartbest to heartbeat

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -32,7 +32,7 @@ The tile comes with pre-built integration with the following externally deployed
 - Redis
 - RabbitMQ
 
-Altoros Heartbest for PCF requires additional configuration to monitor these services.
+Altoros Heartbeat for PCF requires additional configuration to monitor these services.
 
 ## <a id='features'></a>Key Features
 
