--- a/docs-content/installing-collectd.html.md.erb
+++ b/docs-content/installing-collectd.html.md.erb
@@ -7,9 +7,9 @@ This topic describes how to add collectd to your Pivotal Cloud Foundry (PCF) dep
 
 ## <a id='about'></a>About collectd Add-on for PCF
 
-This add-on is required to enable the Altoros Heartbeat monitoring solution consume system metrics
+This add-on is required to enable the Altoros Heartbeat monitoring solution to consume system metrics
 from the VMs that make up a PCF deployment. The [collectd](https://collectd.org/) add-on gathers VM
-metrics from PCF platform components and any other BOSH-deployed services, such as databases
+metrics from PCF platform components and any other BOSH-deployed services, such as databases,
 and makes this information available to Altoros Heartbeat over the network.
 
 ## <a id='prerequisites'></a>Prerequisites
@@ -20,9 +20,8 @@ To complete the collectd add-on installation:
 
 * You must be a PCF operator with admin rights.
   For more information, see [Understanding Pivotal Cloud Foundry User Types](https://docs.pivotal.io/pivotalcf/customizing/user-types.html#operator).
-* You must have a Pivotal Operations Manager (Ops Manager) v1.10 or later.
-* collectd add-on uses 50 MB of memory.
-  Ensure you have at least 128 MB of memory free on each VM before deploying collectd add-on.
+* You must have Pivotal Operations Manager (Ops Manager) v1.10 or later.
+* Ensure you have at least 128 MB of memory free on each VM before deploying collectd add-on. The collectd add-on uses 50 MB of memory.
 
 ## <a id='manifest'></a>Creating a collectd Manifest
 
@@ -55,9 +54,9 @@ Follow the steps below to create a collectd manifest for your deployment:
     <p class="note"><strong>Note:</strong> If this functionality is not required, remove this section.</p>
 
 * `releases: version`: Use the version of collectd downloaded from Pivotal Network
-* `collectd: graphite_prefix`: Do not change the graphit_prefix name. It must be `cf.collectd`.
-* `collectd: graphite_servers`: If you are using Heartbeat in high availability mode, use your Load Balancer endpoint for collectd. For details, see [External Load Balancer configuration](ha-with-external-lb.html#lb-config).
-If you are not going to use the high availability mode, use the IP address of any of Altoros Heartbeat's back-ends. For details, see [Finding Back-End IPs](ha-with-external-lb.html#finding-backend-ip).
+* `collectd: graphite_prefix`: Do not change the graphite_prefix name. It must be `cf.collectd`.
+* `collectd: graphite_servers`: If you are using Heartbeat in high availability (HA) mode, use your load balancer endpoint for collectd. For details, see [External Load Balancer configuration](ha-with-external-lb.html#lb-config).
+If you are not going to use HA mode, use the IP address of any of Altoros Heartbeat's back-ends. For details, see [Finding Back-End IPs](ha-with-external-lb.html#finding-backend-ip).
 * `collectd: interval`: You can modify the 10 second default interval value. This value specifies how often the collectd add-on gathers metrics from VMs.
 
 ##<a id='deploy'></a> Downloading and Deploying the collectd Add-on
@@ -80,7 +79,7 @@ If you are not going to use the high availability mode, use the IP address of an
 
     <pre class="terminal">$ cd ~</pre>
 
-1. On the Ops Manager VM, target your BOSH director instance.
+1. On the Ops Manager VM, target the BOSH director instance.
 
     <pre class="terminal">$ bosh target YOUR-OPS-MANAGER-DIRECTOR-IP
     Target set to 'Ops Manager'
@@ -88,7 +87,7 @@ If you are not going to use the high availability mode, use the IP address of an
     Enter password: ****
     Logged in as 'director'</pre>
 
-1. Upload your release.
+1. Upload the release.
 
     <pre class="terminal">$ bosh upload release ~/BINARY-NAME.tgz</pre>
 
@@ -176,6 +175,6 @@ If you have no existing runtime configuration, follow the steps below:
 
 1. Navigate to your Installation Dashboard in Ops Manager.
 
-1. Click Apply Changes.
+1. Click **Apply Changes**.
 
 The collectd add-on will be removed from your deployment.
