Add concourse and fix links in index.html.md.erb

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -17,9 +17,9 @@ The tile comes with pre-built integration with the following services available 
 
 - [MySQL for PCF](https://network.pivotal.io/products/p-mysql)
 - [RabbitMQ for PCF](https://network.pivotal.io/products/pivotal-rabbitmq-service)
-- [Redis for PCF](https://network.pivotal.io/products/p-redis0)
+- [Redis for PCF](https://network.pivotal.io/products/p-redis)
 - [Crunchy PostgreSQL for PCF](https://network.pivotal.io/products/crunchy-postgresql)
-- [Altoros Log Search for PCF](https://network.pivotal.io/products/altoros-log-search/)
+- [Altoros Log Search for PCF](https://network.pivotal.io/products/altoros-log-search)
 
 This integration enables operators to monitor these services without any additional configuration.
 
@@ -31,6 +31,7 @@ The tile comes with pre-built integration with the following externally deployed
 - Memcached
 - Redis
 - RabbitMQ
+- Concourse
 
 Altoros Heartbeat for PCF requires additional configuration to monitor these services.
 
