Fix text formatting for RabbitMQ section in services-monitoring

--- a/docs-content/services-monitoring.html.md.erb
+++ b/docs-content/services-monitoring.html.md.erb
@@ -53,12 +53,12 @@ This topic describes how to use dashboards for third-party services.
 <%= image_tag("images/rabbitmq-dashboard-header.png") %>
 
 1. To track metrics from the RabbitMQ for PCF tile:
-    1. Open the **Service - RabbitMQ \** dashboards.
+    1. Open the **Service - RabbitMQ \*** dashboards.
     1. Select `p-rabbitmq-*` from the **Deployment** drop-down menu.
     1. Select `rabbitmq-broker` from the **Host** drop-down menu.
 
 1. To track metrics from an external RabbitMQ installation:
-    1. Open the **Service - RabbitMQ \** dashboards.
+    1. Open the **Service - RabbitMQ \*** dashboards.
     1. Select `altoros-heartbeat-*` from the **Deployment** drop-down menu.
     1. Select `external-collectd` from the Host drop-down menu.
 
