--- a/docs-content/installing-collectd.html.md.erb
+++ b/docs-content/installing-collectd.html.md.erb
@@ -54,7 +54,7 @@ Follow the steps below to create a collectd manifest for your deployment:
     <p class="note"><strong>Note:</strong> If this functionality is not required, remove this section.</p>
 
 * `releases: version`: Use the version of the collectd Add-on downloaded from Pivotal Network.
-* `collectd: graphite_prefix`: Do not change the graphite_prefix name. It must be `cf.collectd`.
+* `collectd: graphite_prefix`: Do not change the graphite_prefix name. It must be `cf.collectd.`.
 * `collectd: graphite_servers`: If you are using Heartbeat in high availability (HA) mode, use your load balancer endpoint for collectd. For details, see [External Load Balancer configuration](ha-with-external-lb.html#lb-config).
 If you are not going to use HA mode, use the IP address of any of Altoros Heartbeat's back-ends. For details, see [Finding Back-End IPs](ha-with-external-lb.html#finding-backend-ip).
 * `collectd: interval`: You can modify the 10 second default interval value. This value specifies how often the collectd Add-on gathers metrics from VMs.
