--- a/docs-content/installing-collectd.html.md.erb
+++ b/docs-content/installing-collectd.html.md.erb
@@ -217,7 +217,7 @@ If you have no existing runtime configuration, follow the steps below:
     <pre class="terminal">$ cat empty-runtime.yml
     releases: []</pre>
 
-1. Update the runtime configuration with `empty-runtime.yml` file.
+1. Update the runtime configuration with the `empty-runtime.yml` file.
 
     1. If you are using PCF v1.10, use the BOSH CLI v1 command:
         <pre class="terminal">$ bosh update runtime-config empty-runtime.yml</pre>
