--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -78,6 +78,10 @@ The following table provides version and version-support information about Altor
         <td>v1.10.x and v1.11.x</td>
     </tr>
     <tr>
+        <td>Compatible Pivotal Application Services (PAS)* version(s)</td>
+        <td>v2.0.0</td>
+    </tr>
+    <tr>
         <td>IaaS support</td>
         <td>AWS and OpenStack</td>
     </tr>
@@ -86,6 +90,7 @@ The following table provides version and version-support information about Altor
         <td>No</td>
     </tr>
 </table>
+\* As of PCF v2.0, <em>Elastic Runtime</em> is renamed <em>Pivotal Application Service (PAS)</em>. If your tile supports PCF 2.0, it will use PAS, not Elastic Runtime.
 
 ## <a id="prerequisites"></a>Prerequisites
 
