Changes Ops Manager Director to BOSH Director [#153618865]

--- a/docs-content/installing.html.md.erb
+++ b/docs-content/installing.html.md.erb
@@ -326,13 +326,13 @@ Perform the following steps to increase the default disk volume value:
 follow the instructions in <a href="installing-collectd.html">Installing collectd Add-on for PCF</a>.</p>
 
 
-##<a id='opsmanager'></a>Configure Ops Manager Director
+##<a id='opsmanager'></a>Configure BOSH Director
 
 1. In the **Status** tab, copy the **IP of Bosh HM Forwarder**.
 
     <%= image_tag("images/ops-manager-director-1.png") %>
 
-1. In the **Ops Manager Installation Dashboard**, click the **Ops Manager Director** tile.
+1. In the **Ops Manager Installation Dashboard**, click the **BOSH Director** tile.
 
 1. In the **Settings** tab, click **Director Config**.
 
